--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ collections:
 layout_style: overflow
 palette: blue
 header:
-  title: Stackbit Fresh
+  title: Akash Vijay Jujam
   tagline: Header Tagline
   profile_img: images/avatar.png
   profile_img_alt: Author avatar
