_config.yml: updated tagline in header

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ layout_style: overflow
 palette: blue
 header:
   title: Akash Vijay Jujam
-  tagline: Header Tagline
+  tagline: Docs for Life!
   profile_img: images/avatar.png
   profile_img_alt: Author avatar
   background: dark
