--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ header:
     - label: Blog
       url: /blog/
       style: link
-    - label: Style Guide
+    - label: Projects
       url: /style-guide/
       style: link
     - label: About
