--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ palette: blue
 header:
   title: Akash Vijay Jujam
   tagline: Docs for Life!
-  profile_img: images/avatar.png
+  profile_img: images/propic.jpg
   profile_img_alt: Author avatar
   background: dark
   has_nav: true
