--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ header:
   title: Akash Vijay Jujam
   tagline: Docs for Life!
   profile_img: images/propic.jpg
-  profile_img_alt: Author avatar
+  profile_img_alt: hsakA
   background: dark
   has_nav: true
   nav_links:
