_config.yml: updated profile_img in header

--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,7 @@ header:
       style: icon
       icon_class: dev
       new_window: true
+  profile_img: images/futuristic-lettuce.jpg
 footer:
   content: >-
     &copy; Stackbit. All rights reserved. This Jamstack site was created with <a
