--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ header:
   profile_img: images/futuristic-lettuce.jpg
 footer:
   content: >-
-    &copy; Akash Jujam. All rights reserved.
+    &copy; 2021 Akash Jujam. All rights reserved.
 sass:
   indentWidth: 4
   style: nested
