--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ header:
       icon_class: instagram
       new_window: true
     - label: GitHub
-      url: 'https://github.com/'
+      url: 'https://github.com/writerkash/Portfolio'
       style: icon
       icon_class: github
       new_window: true
