_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ header:
       icon_class: github
       new_window: true
     - label: LinkedIn
-      url: 'https://www.linkedin.com/'
+      url: 'https://www.linkedin.com/in/akashjujam/'
       style: icon
       icon_class: linkedin
       new_window: true
