_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ header:
   has_social: true
   social_links:
     - label: Instagram
-      url: 'https://www.instagram.com/'
+      url: 'https://www.instagram.com/writerkash/'
       style: icon
       icon_class: instagram
       new_window: true
