_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,9 @@ header:
     - label: Blog
       url: /blog/
       style: link
-    
+    - label: Projects
+      url: /style-guide/
+      style: link
     - label: About
       url: /about/
       style: link
