_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,9 @@ header:
     - label: Home
       url: /
       style: link
+      - label: About
+      url: /about/
+      style: link
     - label: Projects
       url: /style-guide/
       style: link
