_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ header:
       style: icon
       icon_class: facebook
       new_window: true
-  profile_img: images/futuristic-lettuce.jpg
+  profile_img: images/propic.jpg
 footer:
   content: >-
     &copy; 2021 Akash Jujam. All rights reserved.
