--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,14 @@ header:
   profile_img: images/propic.jpg
 footer:
   content: '&copy; 2021 Akash Jujam. All rights reserved.'
+  links:
+    - label: lorem-ipsum
+      url: '#'
+      style: link
+      icon_class: dev
+      new_window: false
+      no_follow: false
+      type: action
 sass:
   indentWidth: 4
   style: nested
