_config.yml: updated no_follow in links

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ footer:
       style: link
       icon_class: dev
       new_window: false
-      no_follow: false
+      no_follow: true
       type: action
 sass:
   indentWidth: 4
