--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ palette: blue
 header:
   title: Akash Vijay Jujam
   tagline: Docs for Life!
-  background: dark
+  background: light
   has_nav: true
   nav_links:
     - label: Home
