--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ collections:
   posts:
     permalink: '/posts/:title/'
 layout_style: overflow
-palette: blue
+palette: green
 header:
   title: Akash Vijay Jujam
   tagline: Docs for Life!
