--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ footer:
       new_window: false
       no_follow: false
       type: action
-    - label: lorem-ipsum
+    - label: Projects
       url: '#'
       style: link
       icon_class: dev
