_config.yml: updated url in links

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ footer:
       no_follow: false
       type: action
     - label: Projects
-      url: '#'
+      url: /projects
       style: link
       icon_class: dev
       new_window: false
