--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ footer:
       new_window: false
       no_follow: false
       type: action
-    - label: lorem-ipsum
+    - label: Blog
       url: '#'
       style: link
       icon_class: dev
