_config.yml: updated label in links

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ footer:
       new_window: false
       no_follow: false
       type: action
-    - label: lorem-ipsum
+    - label: Contact
       url: '#'
       style: link
       icon_class: dev
