_config.yml: updated url in links

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ footer:
       no_follow: false
       type: action
     - label: Contact
-      url: '#'
+      url: /conta
       style: link
       icon_class: dev
       new_window: false
