_config.yml: changed

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ layout_style: overflow
 palette: blue
 header:
   title: Akash Vijay Jujam
-  tagline: Docs for !
+  tagline: Docs for Life!
   background: dark
   has_nav: true
   nav_links:
