_config.yml: updated nav_links in header

--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,12 @@ header:
     - label: Contact
       url: /contact/
       style: link
+    - label: lorem-ipsum
+      url: '#'
+      style: link
+      icon_class: dev
+      new_window: false
+      no_follow: false
   has_social: true
   social_links:
     - label: Instagram
